album overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,6 @@ main .navbar {
 
 .navbar-sections {
     flex-direction: column;
-    justify-content: ;
-
 }
 
 .pl {
@@ -353,13 +351,13 @@ main .wrapper {
     height: 100px;
     justify-content: flex-start;
     margin-left: 20px;
+    flex-wrap: wrap;
 }
 
 .box {
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    width: 200px;
+    width: calc((100% / 6) - 10px );
     height: 270px;
     flex: 0 0 auto;
     position: relative;
